<resources>
    <string name="app_name">知者</string>
    <string name="title_home">主页</string>
    <string name="title_forum">论坛</string>
    <string name="title_mine">我的</string>
    <string name="app_back">返回</string>
    <string name="login_account">账户:</string>
    <string name="login_password">密码:</string>
    <string name="login_log">登陆</string>
    <string name="login_register">注册</string>
    <string name="login_please1">请输入账户</string>
    <string name="login_please2">请输入密码</string>
    <string name="item_text1">
        外来物种的自引本来大多是为了丰富物种和经济用途，但是不论是我国还是全世界，入侵物种的存在和危害依然是个十分严峻的问题。外来入侵动植物对农田、园艺、草坪、森林、畜牧、水产等可带来直接经济危害。入侵物种能引起1直接减少物种数量 2间接减少依赖于当地物种生存的物种的数量 3改变当地生态系统和景观4对火灾和虫害的控制和抵抗能力降低5土壤保持和营养改善能力降低6水分保持和水质提高能力降低 7生物多样性保护能力降低等问题。 外来种实际上已经来到我们生活之中，只是我们还不知道罢了。

    </string>

</resources>
