<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_picture1">


    <Button
        android:id="@+id/login_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/login_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginStart="32dp"
        android:text="@string/login_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/login_textView1"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login_account"
        android:gravity="start|bottom"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_editText1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/login_textView2"
        app:layout_constraintTop_toTopOf="@+id/login_editText1" />

    <TextView
        android:id="@+id/login_textView2"
        android:layout_width="55dp"
        android:layout_height="38dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login_password"
        android:gravity="start|bottom"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_editText2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/login_editText2" />

    <EditText
        android:id="@+id/login_editText1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:hint="@string/login_please1"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_editText2"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/login_please2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/login_editText1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</android.support.constraint.ConstraintLayout>